//--------------------------------------------------------------------------
// Copyright 2018 infinimesh
// www.infinimesh.io
//
//   Licensed under the Apache License, Version 2.0 (the "License");
//   you may not use this file except in compliance with the License.
//   You may obtain a copy of the License at
//
//       http://www.apache.org/licenses/LICENSE-2.0
//
//   Unless required by applicable law or agreed to in writing, software
//   distributed under the License is distributed on an "AS IS" BASIS,
//   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
//   See the License for the specific language governing permissions and
//   limitations under the License.
//--------------------------------------------------------------------------

syntax = "proto3";

package infinimesh.deviceregistry;

option go_package = "registrypb";

import "google/protobuf/field_mask.proto";
import "google/protobuf/wrappers.proto";

message Device {
  string id = 1;
  string name = 2;
  google.protobuf.BoolValue enabled = 3;
  Certificate certificate = 4;
  repeated string tags = 5;
  string namespace = 6;
  google.protobuf.BoolValue basic_enabled = 7;
}

message CreateRequest {
  Device device = 1;
}

message Certificate {
  string pem_data = 1;
  string algorithm = 2;
  bytes fingerprint = 3;
  string fingerprintAlgorithm = 4;
}

message CreateResponse {
  Device device = 1;
}

message GetByFingerprintRequest {
  bytes fingerprint = 1;
}

message GetByFingerprintResponse {
  repeated Device devices = 1;
}

message GetRequest {
  string id = 1;
}

message GetResponse {
  Device device = 1;
}

message ListDevicesRequest {
  string namespaceid = 1;
  string account = 2;
}

message ListResponse {
  repeated Device devices = 1;
}

message DeleteRequest {
  string id = 1;
}

message DeleteResponse {}

message UpdateRequest {
  google.protobuf.FieldMask fieldMask = 1;
  Device device = 2;
}

message UpdateResponse{}

message OwnershipRequestDevices { 
  string ownerid = 1; 
  string deviceid = 2;
}

message OwnershipResponseDevices { }

message GetDeviceStatusRequest{
  string deviceid = 1;
}

message GetDeviceStatusResponse{
  bool status = 1;
}

service Devices {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Update(UpdateRequest) returns (UpdateResponse);
  rpc GetByFingerprint(GetByFingerprintRequest) returns (GetByFingerprintResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc List(ListDevicesRequest) returns (ListResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
  rpc AssignOwnerDevices(OwnershipRequestDevices) returns (OwnershipResponseDevices);
	rpc RemoveOwnerDevices(OwnershipRequestDevices) returns (OwnershipResponseDevices);
  rpc GetDeviceStatus(GetDeviceStatusRequest) returns (GetDeviceStatusResponse);
}
